--- a/app/src/main/res/menu/menu_grid.xml
+++ b/app/src/main/res/menu/menu_grid.xml
@@ -31,6 +31,12 @@
         app:showAsAction="ifRoom"/>
 
     <item
+        android:id="@+id/action_set_geofence"
+        android:orderInCategory="95"
+        android:title="@string/menu_setup_geofence"
+        app:showAsAction="never"/>
+
+    <item
         android:id="@+id/action_floorplan"
         android:orderInCategory="120"
         android:title="@string/menu_floorplan"
@@ -47,7 +53,7 @@
         android:checkable="true"
         android:id="@+id/action_show_average"
         android:orderInCategory="135"
-        android:title="Show average"
+        android:title="@string/menu_show_average"
         app:showAsAction="never"/>
 
     <item
@@ -56,6 +62,5 @@
         android:orderInCategory="140"
         android:title="@string/menu_show_debug_info"
         app:showAsAction="never"/>
-
 
 </menu>
