Providing the UI for ranging. Pending background connection modification and analyzing.

--- a/app/src/main/res/layout/fragment_edit_node_details_frame.xml
+++ b/app/src/main/res/layout/fragment_edit_node_details_frame.xml
@@ -40,7 +40,8 @@
         android:paddingRight="@dimen/activity_horizontal_margin">
 
         <eu.kryl.android.common.ui.SbRotatingProgressView
-            style="@style/SbProgressNormal"/>
+            style="@style/SbProgressNormal"
+            android:layout_width="48dp" />
 
     </LinearLayout>
 
