--- a/app/src/main/res/layout/li_network_summary.xml
+++ b/app/src/main/res/layout/li_network_summary.xml
@@ -51,6 +51,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
+        <TextView
+            android:id="@+id/infoNetworkOperatioMode"
+            android:text="network mode: RANGING/POSITIONING"
+            android:paddingStart="@dimen/activity_horizontal_margin"
+            android:paddingEnd="@dimen/activity_horizontal_margin"
+            style="@style/NodeDetailsInNodeList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
