--- a/app/src/main/res/layout/node_details.xml
+++ b/app/src/main/res/layout/node_details.xml
@@ -17,137 +17,136 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:paddingTop="@dimen/activity_vertical_quarter_margin"
-        android:paddingBottom="@dimen/activity_vertical_half_margin"
-        android:orientation="vertical">
+        android:paddingBottom="@dimen/activity_vertical_half_margin">
 
         <!-- dummy view which takes the focus (when edittext is 'unfocused') -->
         <View
-            android:focusable="true"
-            android:focusableInTouchMode="true"
             android:layout_width="0px"
-            android:layout_height="0px"/>
+            android:layout_height="0px"
+            android:focusable="true"
+            android:focusableInTouchMode="true" />
 
         <EditText
             android:id="@+id/etNodeLabel"
-            android:inputType="text|textNoSuggestions|textCapWords"
+            style="@style/nodeTitleEdit"
             android:animateLayoutChanges="true"
             android:hint="@string/anchor_label"
-            android:text="NS-2344"
-            style="@style/nodeTitleEdit" />
+            android:inputType="text|textNoSuggestions|textCapWords"
+            android:text="NS-2344" />
 
         <LinearLayout
-            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/activity_horizontal_margin">
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="5dp">
 
             <TextView
                 style="@style/NodeDetailReadOnlyTitle"
-                android:text="@string/node_detail_id"
-                />
+                android:text="@string/node_detail_id" />
 
             <TextView
-                style="@style/NodeDetailReadOnlyPayload"
                 android:id="@+id/tvNodeId"
-                android:text="uuid"/>
+                style="@style/NodeDetailReadOnlyPayload"
+                android:text="uuid" />
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/activity_horizontal_margin">
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="5dp">
 
             <TextView
-                    style="@style/NodeDetailReadOnlyTitle"
-                    android:text="@string/node_detail_ble_address"/>
+                style="@style/NodeDetailReadOnlyTitle"
+                android:text="@string/node_detail_ble_address" />
 
             <TextView
-                style="@style/NodeDetailReadOnlyPayload"
                 android:id="@+id/tvNodeBleAddress"
-                android:text="AA:BB:CC:DD:EE:FF"/>
+                style="@style/NodeDetailReadOnlyPayload"
+                android:text="AA:BB:CC:DD:EE:FF" />
 
         </LinearLayout>
 
-        <View style="@style/HorizontalRuler"/>
+        <View style="@style/HorizontalRuler" />
 
         <TextView
             style="@style/NodeDetailPropertyTitle"
-            android:text="@string/node_detail_node_type"/>
+            android:text="@string/node_detail_node_type" />
 
         <LinearLayout
             android:id="@+id/nodeTypeSelector"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
             android:background="?attr/selectableItemBackground"
-            android:orientation="horizontal"
-            android:layout_marginStart="0dp">
+            android:orientation="horizontal">
 
             <TextView
-                style="@style/NodeDetailPropertyValue"
                 android:id="@+id/tvNodeType"
+                style="@style/NodeDetailPropertyValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Anchor"
-                android:layout_gravity="center_vertical"/>
+                android:layout_gravity="center_vertical"
+                android:text="Anchor" />
 
             <TextView
                 style="@style/SpinnerLikeArrow"
-                android:text="&#x25BC;"/>
+                android:text="&#x25BC;" />
 
         </LinearLayout>
 
         <TextView
             style="@style/NodeDetailPropertyTitle"
-            android:text="@string/node_detail_network"/>
+            android:text="@string/node_detail_network" />
 
         <LinearLayout
             android:id="@+id/networkNameSelector"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
             android:background="?attr/selectableItemBackground"
-            android:orientation="horizontal"
-            android:layout_marginStart="0dp">
+            android:orientation="horizontal">
 
             <TextView
-                style="@style/NodeDetailPropertyValue"
                 android:id="@+id/tvNetworkName"
+                style="@style/NodeDetailPropertyValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Blanchards"
-                android:layout_gravity="center_vertical"/>
+                android:layout_gravity="center_vertical"
+                android:text="Blanchards" />
 
             <TextView
                 style="@style/SpinnerLikeArrow"
-                android:text="&#x25BC;"/>
+                android:text="&#x25BC;" />
 
         </LinearLayout>
 
         <TextView
             style="@style/NodeDetailPropertyTitle"
-            android:text="@string/node_detail_uwb_mode"/>
+            android:text="@string/node_detail_uwb_mode" />
 
         <LinearLayout
             android:id="@+id/uwbModeSelector"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
             android:background="?attr/selectableItemBackground"
-            android:orientation="horizontal"
-            android:layout_marginStart="0dp">
+            android:orientation="horizontal">
 
             <TextView
-                style="@style/NodeDetailPropertyValue"
                 android:id="@+id/tvUwbMode"
+                style="@style/NodeDetailPropertyValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="off"
-                android:layout_gravity="center_vertical"/>
+                android:layout_gravity="center_vertical"
+                android:text="off" />
 
             <TextView
                 style="@style/SpinnerLikeArrow"
-                android:text="&#x25BC;"/>
+                android:text="&#x25BC;" />
 
         </LinearLayout>
 
@@ -157,144 +156,136 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/updateRateLabel"
-            style="@style/NodeDetailPropertyTitle"
-            android:text="@string/node_detail_update_rate"/>
-
-        <LinearLayout
-            android:id="@+id/updateRateSelector"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/selectableItemBackground"
-            android:orientation="horizontal"
-            android:layout_marginStart="0dp">
-
             <TextView
-                style="@style/NodeDetailPropertyValue"
-                android:id="@+id/tvUpdateRate"
-                android:layout_width="wrap_content"
+                android:id="@+id/updateRateLabel"
+                style="@style/NodeDetailPropertyTitle"
+                android:text="@string/node_detail_update_rate" />
+
+            <LinearLayout
+                android:id="@+id/updateRateSelector"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="500ms"
-                android:layout_gravity="center_vertical"/>
+                android:layout_marginStart="0dp"
+                android:background="?attr/selectableItemBackground"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvUpdateRate"
+                    style="@style/NodeDetailPropertyValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="500ms" />
+
+                <TextView
+                    android:id="@+id/arrowUpdateRate"
+                    style="@style/SpinnerLikeArrow"
+                    android:text="&#x25BC;" />
+
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/arrowUpdateRate"
-                android:text="&#x25BC;"
-                style="@style/SpinnerLikeArrow"/>
+                android:id="@+id/stationaryUpdateRateLabel"
+                style="@style/NodeDetailPropertyTitle"
+                android:text="@string/node_detail_stationary_update_rate" />
 
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/stationaryUpdateRateLabel"
-            style="@style/NodeDetailPropertyTitle"
-            android:text="@string/node_detail_stationary_update_rate"/>
-
-        <LinearLayout
-            android:id="@+id/stationaryUpdateRateSelector"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/selectableItemBackground"
-            android:orientation="horizontal"
-            android:layout_marginStart="0dp">
-
-            <TextView
-                style="@style/NodeDetailPropertyValue"
-                android:id="@+id/tvStationaryUpdateRate"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/stationaryUpdateRateSelector"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="5s"
-                android:layout_gravity="center_vertical"/>
+                android:layout_marginStart="0dp"
+                android:background="?attr/selectableItemBackground"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/arrowStationaryUpdateRate"
-                android:text="&#x25BC;"
-                style="@style/SpinnerLikeArrow"/>
+                <TextView
+                    android:id="@+id/tvStationaryUpdateRate"
+                    style="@style/NodeDetailPropertyValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="5s" />
+
+                <TextView
+                    android:id="@+id/arrowStationaryUpdateRate"
+                    style="@style/SpinnerLikeArrow"
+                    android:text="&#x25BC;" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
-        </LinearLayout>
-
-        <View style="@style/HorizontalRuler"/>
+        <View style="@style/HorizontalRuler" />
 
         <CheckBox
             android:id="@+id/chboxFirmwareUpdate"
             style="@style/NodeDetailPropertyTitle"
-            android:layout_marginStart="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/node_edit_uwb_firmware_update"
-            />
+            android:layout_marginStart="10dp"
+            android:text="@string/node_edit_uwb_firmware_update" />
 
         <CheckBox
             android:id="@+id/chboxLedIndication"
             style="@style/NodeDetailPropertyTitle"
-            android:layout_marginStart="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/node_edit_led"
-            />
+            android:layout_marginStart="10dp"
+            android:text="@string/node_edit_led" />
 
         <CheckBox
             android:id="@+id/chboxBleEnabled"
             style="@style/NodeDetailPropertyTitle"
-            android:layout_marginStart="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/node_edit_ble"
-            />
+            android:layout_marginStart="10dp"
+            android:text="@string/node_edit_ble" />
 
         <CheckBox
             android:id="@+id/chboxResponsiveMode"
             style="@style/NodeDetailPropertyTitle"
-            android:layout_marginStart="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/node_edit_responsive_mode"
-            />
+            android:layout_marginStart="10dp"
+            android:text="@string/node_edit_responsive_mode" />
 
         <CheckBox
             android:id="@+id/chboxLocationEngine"
             style="@style/NodeDetailPropertyTitle"
-            android:layout_marginStart="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/node_edit_location_engine"
-            />
+            android:layout_marginStart="10dp"
+            android:text="@string/node_edit_location_engine" />
 
         <CheckBox
             android:id="@+id/chboxAccelerometer"
             style="@style/NodeDetailPropertyTitle"
-            android:layout_marginStart="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/node_edit_accelerometer"
-            />
+            android:layout_marginStart="10dp"
+            android:text="@string/node_edit_accelerometer" />
 
         <CheckBox
             android:id="@+id/chboxInitiator"
             style="@style/NodeDetailPropertyTitle"
-            android:layout_marginStart="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/node_edit_initiator"
-            />
+            android:layout_marginStart="10dp"
+            android:text="@string/node_edit_initiator" />
 
         <TextView
             android:id="@+id/tvPositionTitle"
             style="@style/NodeDetailPropertyTitle"
-            android:text="@string/node_detail_position"/>
+            android:text="@string/node_detail_position" />
 
         <LinearLayout
             android:id="@+id/tvPositionContainer"
-            android:orientation="horizontal"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/node_value_left_padding"
             android:layout_marginEnd="@dimen/node_value_left_padding"
-            >
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:orientation="horizontal">
 
             <android.support.design.widget.TextInputLayout
                 style="@style/NodeDetailPositionCompound"
@@ -312,7 +303,7 @@
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/node_detail_position_y"
-                    style="@style/editText.coordinate"/>
+                    style="@style/editText.coordinate" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -322,11 +313,84 @@
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/node_detail_position_z"
-                    style="@style/editText.coordinate"/>
+                    style="@style/editText.coordinate" />
 
             </android.support.design.widget.TextInputLayout>
 
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/tvSlavePosTitle"
+            style="@style/NodeDetailPropertyTitle"
+            android:text="@string/slave_detail_config" />
+
+        <LinearLayout
+            android:id="@+id/tvSlaveConfigContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/node_value_left_padding"
+            android:layout_marginEnd="@dimen/node_value_left_padding"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:orientation="horizontal">
+
+            <android.support.design.widget.TextInputLayout
+                style="@style/NodeDetailPositionCompound"
+                android:hint="@string/slave_detail_pos_x_coupler">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/slave_detail_pos_x"
+                    style="@style/editText.coordinate" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                style="@style/NodeDetailPositionCompound"
+                android:hint="@string/slave_detail_pos_y_centerline">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/slave_detail_pos_y"
+                    style="@style/editText.coordinate" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                style="@style/NodeDetailPositionCompound"
+                android:hint="@string/slave_detail_pos_z_top_of_rail">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/slave_detail_pos_z"
+                    style="@style/editText.coordinate" />
+
+            </android.support.design.widget.TextInputLayout>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tvSlaveAssocTitle"
+            style="@style/NodeDetailPropertyTitle"
+            android:text="@string/slave_assoc_config" />
+
+        <LinearLayout
+            android:id="@+id/tvSlaveAssocContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/node_value_left_padding"
+            android:layout_marginEnd="@dimen/node_value_left_padding"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:orientation="horizontal">
+            <android.support.design.widget.TextInputLayout
+                style="@style/NodeDetailPositionCompound"
+                android:hint="@string/slave_assoc_input_hint">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/slave_detail_association"
+                    style="@style/editText.coordinate" />
+
+            </android.support.design.widget.TextInputLayout>
+        </LinearLayout>
+
 
     </LinearLayout>
 
