--- a/app/src/main/res/layout/node_details.xml
+++ b/app/src/main/res/layout/node_details.xml
@@ -282,6 +282,8 @@
             android:layout_marginStart="10dp"
             android:text="@string/node_edit_initiator" />
 
+        <View style="@style/HorizontalRuler" />
+
         <TextView
             android:id="@+id/tvPositionTitle"
             style="@style/NodeDetailPropertyTitle"
@@ -326,6 +328,34 @@
                     style="@style/editText.coordinate" />
 
             </android.support.design.widget.TextInputLayout>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/slaveMasterSideLabel"
+            style="@style/NodeDetailPropertyTitle"
+            android:text="@string/slave_master_detail_slave_side" />
+
+        <LinearLayout
+            android:id="@+id/slaveMasterSideSelector"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:background="?attr/selectableItemBackground"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvSlaveMasterSide"
+                style="@style/NodeDetailPropertyValue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="ABUnknown" />
+
+            <TextView
+                android:id="@+id/arrowSlaveSide"
+                style="@style/SpinnerLikeArrow"
+                android:text="&#x25BC;" />
 
         </LinearLayout>
 
@@ -461,6 +491,15 @@
                 android:id="@+id/tvSlaveMasterFieldExplainYSign"
                 style="@style/NodeDetailReadOnlyPayload"
                 android:text="@string/slave_master_field_y_detail_sign" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/activity_horizontal_margin"
+                android:layout_marginTop="0dp"
+                android:id="@+id/tvSlaveMasterFieldExplainYError"
+                style="@style/NodeDetailReadOnlyPayload"
+                android:text="@string/slave_master_field_y_error_sign" />
 
             <LinearLayout
                 android:layout_width="match_parent"
