UI Optimization and Input Filter set for MasterInformativePosition

--- a/app/src/main/res/layout/li_autopositioning_node_item.xml
+++ b/app/src/main/res/layout/li_autopositioning_node_item.xml
@@ -45,7 +45,7 @@
             >
 
             <TextView
-                android:id="@+id/nodeName"
+                android:id="@+id/nodeDescriptionAutoGen"
                 android:text="node name"
                 style="@style/NodeTitleInNodeList"
                 android:layout_width="wrap_content"
