--- a/app/src/main/res/layout/li_discovered_node.xml
+++ b/app/src/main/res/layout/li_discovered_node.xml
@@ -40,7 +40,7 @@
                       android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/nodeName"
+                android:id="@+id/nodeDescriptionAutoGen"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="111E"
