--- a/app/src/main/res/layout/li_firmware_node_item.xml
+++ b/app/src/main/res/layout/li_firmware_node_item.xml
@@ -66,7 +66,7 @@
             >
 
             <TextView
-                android:id="@+id/nodeName"
+                android:id="@+id/nodeDescriptionAutoGen"
                 android:text="node name"
                 style="@style/NodeTitleInNodeList"
                 android:layout_width="wrap_content"
